# django-project

./: Procfile  db.sqlite3  pyproject.toml
djangoProject/: settings.py  urls.py
templates/: base.html
templates/pages/: about.html  home.html
