[tool.poetry]
name = "djangoproject"
version = "0.1.0"
description = ""
authors = ["Dagore-dev <david.gomez.redondo.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.5"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
